// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Pagination DefaultPagination renders 1`] = `
<Fragment>
  <h2
    id="default-pagination"
  >
    Default pagination
  </h2>
  <p>
    Default pagination shows the pages as numbers. Add 
    <CodeTags
      code=".pagination"
      type="secondary"
    />
     to an 
    <CodeTags
      code="<ul>"
      type="primary"
    />
     containing
    <CodeTags
      code="<li>"
      type="primary"
    />
    . If you wish to present the user with navigational arrows you need to add those as 
    <CodeTags
      code="<li>"
      type="primary"
    />
     elements.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Pagination
      arrows={true}
      farArrows={true}
      items={
        Array [
          Object {
            "active": false,
            "href": "#",
            "name": "1",
          },
          Object {
            "active": false,
            "href": "#",
            "name": "2",
          },
          Object {
            "active": false,
            "href": "#",
            "name": "3",
          },
          Object {
            "active": false,
            "href": "#",
            "name": "4",
          },
          Object {
            "active": true,
            "href": "#",
            "name": "5",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Pagination PaginationBullets renders 1`] = `
<Fragment>
  <h2
    id="pagination-bullets"
  >
    Pagination bullets
  </h2>
  <p>
    If you want to show bullets instead of numbers you can add 
    <CodeTags
      code=".pagination-bullets"
      type="secondary"
    />
     to your 
    <CodeTags
      code="<ul>"
      type="primary"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Pagination
      arrows={true}
      farArrows={true}
      items={
        Array [
          Object {
            "active": false,
            "href": "#",
            "name": "1",
          },
          Object {
            "active": false,
            "href": "#",
            "name": "2",
          },
          Object {
            "active": false,
            "href": "#",
            "name": "3",
          },
          Object {
            "active": false,
            "href": "#",
            "name": "4",
          },
          Object {
            "active": true,
            "href": "#",
            "name": "5",
          },
        ]
      }
      type="bullets"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Pagination SimplePagination renders 1`] = `
<Fragment>
  <h2
    id="simple-pagination"
  >
    Simple pagination
  </h2>
  <p>
    If the number of pages get high enough then it is better to use numbers.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Pagination
      arrows={true}
      farArrows={true}
      text="16 of 256"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Pagination renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Use the pagination component to indicate that a series of related content exist across multiple pages.
  </p>
  <DefaultPagination />
  <PaginationBullets />
  <SimplePagination />
  <NpmInformation
    componentName="pagination"
  />
</DocContainer>
`;
